--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "etf-portal-backend",
-  "type": "commonjs",
+  "type": "module",
   "version": "1.0.0",
   "scripts": { "start": "node src/server.js" },
   "dependencies": {
@@ -16,4 +16,5 @@
     "xlsx": "^0.18.5"
   }
 }
+
 
